--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h1>Oii, me chamo Vitória Dantas!!</h1>
+    <h1>Oii, eu me chamo Vitória Dantas!!</h1>
 
     <h2>Sobre mim:</h2>
     <p>Tenho 18  anos e estou cursando o terceiro ano do ensino médio em  informática no CETEP.</p>
